# python-runner

./: LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
runner/: __init__.py  __main__.py
tests/: test_runner.py
