[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "runner"
version = "0.1.0"
authors = [
    {name = "Li Meng Jun", email = "lmjubuntu@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = [
    "runner"
]
